added basic html structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-test index
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>tester</title>
+</head>
+<body>
+    
+</body>
+</html>
